traefik_ingress/name-based-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
